# aerochunk

./: .gitignore  26.1  README.md  benchmark.py  enterprise_validation.html  pyproject.toml  pytest  stress_test.py  test_output.html  validate_enterprise.py
aerochunk/: __init__.py  chunker.py
tests/: test_chunker.py
