[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerochunk" 
version = "0.1.0"
authors = [{ name="Harsh Rana" }]
description = "A zero-framework, low-latency semantic chunker with visual HTML debugging."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0"
]